include/cryptanalysis/ca_ffi.h

typedef struct ca_ctx ca_ctx;
/* ---- groups ------------------------------------------------------------- */
CA_API ca_ctx *ca_ctx_new_zp(uint64_t p, uint64_t order);
CA_API ca_ctx *ca_ctx_new_ec(uint64_t p, uint64_t a, uint64_t b, uint64_t order);
CA_API void ca_ctx_free(ca_ctx *ctx);
CA_API int ca_ctx_kind(const ca_ctx *ctx);          /* 1 = Z_p^*, 2 = EC */
CA_API uint64_t ca_ctx_p(const ca_ctx *ctx);
CA_API uint64_t ca_ctx_order(const ca_ctx *ctx);
CA_API uint64_t ca_ctx_cofactor(const ca_ctx *ctx);
CA_API void ca_ctx_set_order(ca_ctx *ctx, uint64_t order, uint64_t cofactor);
CA_API uint64_t ca_ctx_curve_a(const ca_ctx *ctx);
CA_API uint64_t ca_ctx_curve_b(const ca_ctx *ctx);
/* ---- elements ----------------------------------------------------------- */
CA_API int ca_ctx_validate(const ca_ctx *ctx, const uint64_t w[4]);   /* 1 if a valid element */
CA_API int ca_ctx_identity(const ca_ctx *ctx, uint64_t out[4]);
CA_API int ca_ctx_is_identity(const ca_ctx *ctx, const uint64_t w[4]);
CA_API int ca_ctx_op(const ca_ctx *ctx, uint64_t out[4], const uint64_t a[4], const uint64_t b[4]);
CA_API int ca_ctx_inv(const ca_ctx *ctx, uint64_t out[4], const uint64_t a[4]);
CA_API int ca_ctx_mul(const ca_ctx *ctx, uint64_t out[4], const uint64_t a[4], uint64_t k);
CA_API int ca_ctx_equal(const ca_ctx *ctx, const uint64_t a[4], const uint64_t b[4]);
CA_API int ca_ctx_elem_order(const ca_ctx *ctx, const uint64_t a[4], uint64_t *order);
CA_API int ca_ctx_find_generator(const ca_ctx *ctx, uint64_t out[4], uint64_t seed);
CA_API int ca_ctx_random_element(const ca_ctx *ctx, uint64_t out[4], uint64_t seed);
CA_API int ca_ctx_lift_x(const ca_ctx *ctx, uint64_t out[4], uint64_t x);  /* EC only */
CA_API int ca_ec_order(uint64_t p, uint64_t a, uint64_t b, uint64_t *order); /* point counting */
/* ---- solver options ----------------------------------------------------- */
typedef struct ca_ffi_options {
    uint32_t threads;            /* rho: worker threads (0 => 1) */
    uint32_t reserved0;
    uint64_t seed;               /* 0 => random */
    uint64_t max_ops;            /* 0 => unlimited */
    /* bsgs */
    uint64_t bsgs_table_size;    /* 0 => sqrt(width) */
    /* rho */
    uint32_t rho_r;              /* 0 => auto */
    int32_t  rho_dp_bits;        /* -1 => auto */
    uint32_t rho_walks_per_thread;
    int32_t  rho_negation_map;   /* 1 => use when available */
    uint64_t rho_max_table_entries;
    /* kangaroo */
    uint32_t kangaroo_herd_size; /* 0 => auto */
    int32_t  kangaroo_dp_bits;   /* -1 => auto */
    uint32_t kangaroo_jumps;     /* 0 => auto */
    uint32_t reserved1;
    /* grumpy giants */
    uint64_t grumpy_m;           /* 0 => alpha*sqrt(width) */
    double   grumpy_alpha;       /* 0 => 0.7 */
    /* dlog driver */
    int32_t  solver;             /* ca_solver: 0 auto, 1 bsgs, 2 rho, 3 kangaroo, 4 grumpy, 5 brute */
    int32_t  reserved2;
    uint64_t bsgs_max_prime;     /* auto: BSGS for prime factors <= this (0 => 2^36) */
} ca_ffi_options;
CA_API void ca_ffi_options_default(ca_ffi_options *o);
CA_API size_t ca_ffi_options_size(void);
CA_API size_t ca_stats_size(void);
CA_API size_t ca_ic_params_size(void);
CA_API size_t ca_ic_stats_size(void);