include/cryptanalysis/ca_indexcalc.h

typedef enum ca_ic_method {
    CA_IC_LINEAR_SIEVE = 0,
    CA_IC_RANDOM_EXPONENT = 1
} ca_ic_method;
typedef struct ca_ic_params {
    ca_ic_method method;
    uint32_t factor_base_bound;  /* B; 0 => auto from the size of p */
    uint32_t sieve_radius;       /* C (linear sieve only); 0 => auto */
    uint32_t threads;            /* relation collection threads; 0 => 1 */
    uint32_t extra_relations;    /* relations beyond #unknowns; 0 => auto */
    uint64_t seed;               /* 0 => random */
    uint64_t max_relation_tries; /* random-exponent method: abort bound (0 = none) */
    int verbose;                 /* stage reports on stderr */
} ca_ic_params;
typedef struct ca_ic_stats {
    uint32_t factor_base_size;   /* primes in the factor base */
    uint32_t unknowns;           /* columns of the relation matrix */
    uint32_t relations;          /* relations collected */
    uint32_t verified_logs;      /* factor-base logs verified */
    uint64_t sieve_candidates;   /* values passed to trial division */
    uint64_t smooth_tests;       /* random-exponent method: candidates tested */
    double   sieve_seconds;
    double   linalg_seconds;
    double   total_seconds;
    uint32_t lanczos_iterations;
    uint32_t threads;
} ca_ic_stats;
typedef struct ca_ic_ctx ca_ic_ctx;
CA_API void ca_ic_params_default(ca_ic_params *p);